--- a/apps/templates/bookmodules/index.html
+++ b/apps/templates/bookmodules/index.html
@@ -5,8 +5,7 @@
 <h1 style="color: blue;">This is heading 1 (Library)</h1> <!-- add inline css -->
 <p style="color: white;background-color: black;">This is a paragraph text </p> <!--
 add inline css -->
-<a href="https://www.w3schools.com/html/default.asp">Click Here to learn more about
-HTML & CSS</a>
+<a href="https://www.w3schools.com/html/default.asp">Click Here to learn more about HTML & CSS</a>
 <hr>
 <!-- This is a comment in HTML, not render in the bowser -->
 <h2>This is heading 2</h2>
