--- a/apps/templates/bookmodules/listing.html
+++ b/apps/templates/bookmodules/listing.html
@@ -7,7 +7,7 @@
 <ul>
 
     <li>you can meet new people from countries around the World</li>
-    <li>you have access to new media as it becomes public:
+    <li>you have access to new media as it becomes public:</li>
        <ul>
         <li>new games </li>
         <li>new applications </li>
@@ -28,12 +28,12 @@
             </ol>
        </ul>
 
-       <li>Links</li>
-       <li>Keeping in touch with old friends</li>
-       <li>It's the technology of the future!</li>
+     <li>Links</li>
+     <li>Keeping in touch with old friends</li>
+     <li>It's the technology of the future!</li>
 
 
-    </li>
+    
 
 
 
