--- a/apps/templates/bookmodules/index.html
+++ b/apps/templates/bookmodules/index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% comment %} {% extends "layouts/base.html" %}
 {% load static %}
 {% block title %} My First Index HTML Page {% endblock title %}
 {% block content %}
@@ -13,4 +13,9 @@ add inline css -->
 <hr>
 <h2>This is heading 2</h2>
 <p>This is some other text.</p>
-{% endblock content %}
+{% endblock content %} {% endcomment %}
+
+
+
+
+<h1>Successfull</h1>
