--- a/apps/templates/bookmodules/edit_student2.html
+++ b/apps/templates/bookmodules/edit_student2.html
@@ -1,4 +1,11 @@
 <h2>Edit the student</h2>
+{% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
@@ -6,3 +13,6 @@
 </form>
 
 <a href="{% url 'list_students2' %}">Back to Students List</a>
+{% if user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+{% endif %}
