--- a/apps/templates/bookmodules/list_students2.html
+++ b/apps/templates/bookmodules/list_students2.html
@@ -24,7 +24,19 @@
 <body>
     <h1>List of Books</h1>
 
-    <a href="{% url 'add_student2' %}">Add New Student</a>
+    {% if user.is_authenticated %}
+    <a href="{% url 'add_student'%}">add student</a>
+    {% else %}
+        <p>You need to be logged in to add or edit students.</p>
+    {% endif %}
+    
+    {% if messages %}
+        <ul>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
     <table>
         <thead>
@@ -44,13 +56,20 @@
                             {%if not forloop.last%}, {% endif %}
                         {%endfor%}</td>
                     <td class="actions">
-                        <a href="{% url 'edit_student2' student.id %}">Edit</a>
-                        <a href="{% url 'delete_student2' student.id %}">Delete</a>
+                        {% if user.is_authenticated %}
+                        <a href="{% url 'edit_student' student.id %}">edit</a> | <a href="{% 'delete_student' student.id %}">delete</a>
+                        {% else %}
+                        <p>You need to be logged in to edit students.</p>
+                        {% endif %}
+                                  
                     </td>
                 </tr>
             
             {% endfor %}
         </tbody>
     </table>
+    {% if user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+{% endif %}
 </body>
 </html>
