--- a/apps/templates/usermodule/login.html
+++ b/apps/templates/usermodule/login.html
@@ -1,5 +1,4 @@
-
-<h2>Add new student</h2>
+<h2>Login</h2>
 {% if messages %}
     <ul>
         {% for message in messages %}
@@ -7,13 +6,11 @@
         {% endfor %}
     </ul>
 {% endif %}
+
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Save</button>
+    <button type="submit">Login</button>
 </form>
+<a href="{% url 'register' %}">Don't have an account? Register</a>
 
-<a href="{% url 'list_students' %}">Back to Students List</a>
-{% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">Logout</a>
-{% endif %}
