--- a/apps/templates/usermodule/login.html
+++ b/apps/templates/usermodule/login.html
@@ -12,5 +12,8 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
+<br>
 <a href="{% url 'register' %}">Don't have an account? Register</a>
+<br>
+<a href="{% url 'logout' %}">Logout</a>
 
